--- a/assets/scss/pages/index/_header.scss
+++ b/assets/scss/pages/index/_header.scss
@@ -1,6 +1,6 @@
-@import '../abstracts/variables';
-@import '../mixins/responsive';
-@import '../mixins/mix_font';
+@import '../../abstracts/variables';
+@import '../../mixins/responsive';
+@import '../../mixins/mix_font';
 
 body {
     header{
@@ -18,6 +18,14 @@ body {
         @include custom_responsive(0px, 540px){
             @include text_font (rgba(17, 17, 17, 0.6), 20px, 700);
         }
+        }
+        button{
+            width: 120px;
+            height: 48px;
+            flex-shrink: 0; 
+            border-radius: 8px;
+            background: $button_bg;    
+            @include text_font(#fff, 20px, 700);                  
         }
     }
 }
