--- a/assets/scss/pages/index/_header.scss
+++ b/assets/scss/pages/index/_header.scss
@@ -7,6 +7,11 @@ body {
         border-radius: 8px;
         background: rgba(16, 144, 216, 0.10);
 
+        @include custom_responsive(0px, 576px){
+            display: grid;
+            grid-template-columns: 1fr;   
+            gap: 20px;     
+        }
         h2{
         @include text_font (rgba(17, 17, 17, 0.8), 45px, 700);
         @include custom_responsive(0px, 540px){
