--- a/assets/scss/pages/index/_result.scss
+++ b/assets/scss/pages/index/_result.scss
@@ -1,5 +1,6 @@
 
     #result-box{
+        @include text_font($black, 16px, 400);
         width: 350px;
         height: 400px;
         border: 1px solid rgba(17, 17, 17, 0.10);
@@ -7,7 +8,24 @@
         background-color: pink;
         text-align: center;
         padding-top: 20px;
+        @include custom_responsive(0px, 576px){
+            width: 300px;      
+        }
+        h6{
+            font-size: 18px;
+            font-weight: 500;
+        }
         #result-list{
-           
+            li{
+                @include custom_responsive(0px, 576px){
+                    padding: 0px 5px;        
+                }
+            }
+        .convert-button{
+            padding: 5px 10px; 
+            border-radius: 8px;
+            background: $button_bg;    
+            @include text_font(#fff, 16px, 400);
         }
     }
+}
