--- a/assets/scss/pages/index/_body.scss
+++ b/assets/scss/pages/index/_body.scss
@@ -11,13 +11,17 @@ main{
     @include custom_responsive(0px, 780px){
         grid-template-columns: 1fr; 
         gap: 30px;       
+        align-items: center;
+        justify-content: center;
     }
     #item-container{
-        border: 1px solid red;
         text-align: center;
         display: flex;
         flex-wrap: wrap;
         gap: 25px;
         width: 100%;
+        @include custom_responsive(0px, 780px){   
+            justify-content: center;   
+        }
     }
 }
