--- a/assets/scss/pages/index/_single_box.scss
+++ b/assets/scss/pages/index/_single_box.scss
@@ -42,6 +42,7 @@
         display: flex;
         gap: 5px;
         align-items: center;
+        // display: none;
         input{
             width: 65px;
             height: 32px;
@@ -54,7 +55,7 @@
             @include text_font(#414141, 16px, 400);
             margin-right: 10px
         }
-        #submit-input{
+        .submit-input{
             font-size: 32px;
             color: $button_bg;
             &:hover{
