--- a/assets/scss/pages/index/_single_box.scss
+++ b/assets/scss/pages/index/_single_box.scss
@@ -32,6 +32,7 @@
         gap: 20px;
         #edit-input{
             font-size: 18px;
+            font-weight: 500;
             &:hover{
                 color: rgb(37 99 235);
             }
