--- a/assets/scss/pages/index/_result.scss
+++ b/assets/scss/pages/index/_result.scss
@@ -1,7 +1,7 @@
 
     #result-box{
-        @include text_font($black, 16px, 400);
-        width: 350px;
+        @include text_font($black, 14px, 400);
+        width: 400px;
         height: 400px;
         border: 1px solid rgba(17, 17, 17, 0.10);
         border-radius: 8px;
@@ -9,7 +9,7 @@
         text-align: center;
         padding-top: 20px;
         @include custom_responsive(0px, 780px){
-            width: 300px;
+            width: 320px;
             margin: auto;
         }
         h6{
@@ -18,6 +18,7 @@
         }
         #result-list{
             li{
+                padding: 0px 10px;
                 @include custom_responsive(0px, 780px){
                     padding: 0px 5px;        
                 }
@@ -26,7 +27,7 @@
             padding: 5px 10px; 
             border-radius: 8px;
             background: $button_bg;    
-            @include text_font(#fff, 16px, 400);
+            @include text_font(#fff, 14px, 400);
         }
     }
 }
