--- a/assets/scss/pages/index/_result.scss
+++ b/assets/scss/pages/index/_result.scss
@@ -29,5 +29,14 @@
             background: $button_bg;    
             @include text_font(#fff, 14px, 400);
         }
+        .remove-result{
+            font-size: 18px;
+            color: red;
+            cursor: pointer;
+            transition-duration: .3s;
+            &:hover{
+                color: darkred;
+            }
+        }
     }
 }
