--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,6 +2,7 @@
 @import "./pages/index/body";
 @import "./pages/index/single_box";
 @import "./pages/index/result";
+@import "./pages/blog/blog";
 @import "./abstracts/variables";
 @import "./components/buttons";
 @import "./layouts/headers";
