index page style modified and blog page home button added

--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -2,7 +2,7 @@
 
  @mixin card() {
     padding: 30px;
-    background-color: $grey;
+    // background-color: $grey;
     display: flex;
     flex-direction: column;
     justify-content: center;
