--- a/assets/scss/pages/index/_result.scss
+++ b/assets/scss/pages/index/_result.scss
@@ -5,7 +5,7 @@
         height: 400px;
         border: 1px solid rgba(17, 17, 17, 0.10);
         border-radius: 8px;
-        background-color: pink;
+        background-color: rgb(242, 228, 231);
         text-align: center;
         padding-top: 20px;
         @include custom_responsive(0px, 780px){
