--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,7 +13,7 @@
 
 .body{
     padding: 50px;
-    background-color: rgb(56, 56, 56);
+    // background-color: rgb(56, 56, 56);
     height: 100%;
     @include custom_responsive(0px, 576px){
         padding: 5px;       
